[tool.poetry]
name = "zombie-invasion"
version = "0.1.0"
description = "A simulation of a Zombie Invasion"
authors = ["Andy Dawkins <andydawkins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
